src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Advisor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advisor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Davenport_Username__c</fullName>
        <label>Davenport Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServWaveExt__WavePermissions__c</fullName>
        <description>Enter View All to give users access to all data in Wave for Financial Services Cloud.</description>
        <label>FSC Analytics Permissions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferrerScore__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Referrer Score</description>
        <label>Referrer Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Firm_Wide_Access_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Firm Wide Access Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Former_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Former Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_AccountId__c</fullName>
        <label>Legacy AccountId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_CallCenterId__c</fullName>
        <label>Legacy CallCenterId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By_ID__c</fullName>
        <label>Legacy Created By ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MGP_License_Type__c</fullName>
        <label>MGP License Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Advisor</fullName>
                </value>
                <value>
                    <fullName>Assistant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MGP_User_Email_Address__c</fullName>
        <label>MGP User Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MGP_User_ID__c</fullName>
        <label>MGP User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAML_HHID__c</fullName>
        <label>SAML_HHID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAML_UserID__c</fullName>
        <label>SAML UserID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnxccm__Agent_AutoLogin__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto Login</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnxccm__Agent_Device_Name__c</fullName>
        <description>Name of the Device (e.g. SEP012345678, CSFUSER) to control. Defaults to picking the first available device.</description>
        <label>Device Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnxccm__Agent_Email__c</fullName>
        <label>Service Discovery Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>cnxccm__Agent_Extension__c</fullName>
        <description>The selected Line of a device. Defaults to picking the first available line.</description>
        <label>Device Line</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>cnxccm__Agent_ID__c</fullName>
        <label>User</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnxccm__Agent_PasswordEncrypted__c</fullName>
        <label>Password</label>
        <length>32</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>cnxccm__Agent_SpeedDialNumbers__c</fullName>
        <description>A list of names and numbers that will be added to the speed dial list.</description>
        <label>Speed Dial Numbers</label>
        <length>1060</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>